loading error modified

--- a/load-data.html
+++ b/load-data.html
@@ -61,7 +61,7 @@
         </thead>
       </table>
       
-      <div class="m-3 p-0 row justify-content-center" id="message">        
+      <div class="m-0 p-3 row justify-content-center" id="message" hidden>        
       </div>
    </div>
 
