added some ui changes - responsive

--- a/load-data.html
+++ b/load-data.html
@@ -49,8 +49,8 @@
    </div> -->
 
 
-   <div id="table-container" class="container mt-4">   	
-      <table id="allData" class="display" width="100%">
+   <div id="table-container" class="container mt-4 col-sm-12">   	
+      <table class="hover table" id="allData" class="display" width="100%">
         <thead>
           <tr>
             <th>ID</th>
